--- a/modules/custom/drustack_core/config/install/user.role.authenticated.yml
+++ b/modules/custom/drustack_core/config/install/user.role.authenticated.yml
@@ -10,7 +10,16 @@ permissions:
   - 'access content'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'access sitemap'
+  - 'access user contact forms'
+  - 'access user profiles'
+  - 'cancel account'
+  - 'edit own comments'
   - 'post comments'
   - 'search content'
+  - 'skip CAPTCHA'
   - 'skip comment approval'
+  - 'use advanced search'
   - 'use text format basic_html'
+  - 'use text format restricted_html'
+  - 'view media'
