--- a/modules/custom/drustack_core/drustack_core.info.yml
+++ b/modules/custom/drustack_core/drustack_core.info.yml
@@ -6,19 +6,25 @@ dependencies:
   - 'drupal:aggregator'
   - 'drupal:block'
   - 'drupal:block_content'
+  - 'drupal:ckeditor'
+  - 'drupal:comment'
   - 'drupal:contact'
   - 'drupal:content_moderation'
+  - 'drupal:editor'
   - 'drupal:field'
   - 'drupal:file'
+  - 'drupal:filter'
   - 'drupal:image'
   - 'drupal:media'
   - 'drupal:menu_link_content'
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:path_alias'
+  - 'drupal:rdf'
   - 'drupal:responsive_image'
   - 'drupal:shortcut'
   - 'drupal:taxonomy'
+  - 'drupal:text'
   - 'drupal:tour'
   - 'drupal:user'
   - 'features:features'
