rollback drustack_devel

--- a/modules/custom/drustack_article/drustack_article.info.yml
+++ b/modules/custom/drustack_article/drustack_article.info.yml
@@ -1,7 +1,8 @@
-name: Article
+name: 'DruStack Article'
 description: 'Provides Article content type and related configuration. Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
 type: module
 core_version_requirement: '^8.9 || ^9'
+package: DruStack
 dependencies:
   - 'drupal:comment'
   - 'drupal:field'
@@ -14,4 +15,3 @@ dependencies:
   - 'drupal:text'
   - 'drupal:user'
   - 'scheduler:scheduler'
-package: DruStack
