--- a/modules/custom/drustack_core/drustack_core.info.yml
+++ b/modules/custom/drustack_core/drustack_core.info.yml
@@ -1,7 +1,8 @@
-name: Core
+name: 'DruStack Core'
 description: 'Provides core components required by other features.'
 type: module
 core_version_requirement: '^8.9 || ^9'
+package: DruStack
 dependencies:
   - 'drupal:aggregator'
   - 'drupal:block'
@@ -28,4 +29,3 @@ dependencies:
   - 'drupal:tour'
   - 'drupal:user'
   - 'features:features'
-package: DruStack
