--- a/modules/custom/drustack_page/drustack_page.info.yml
+++ b/modules/custom/drustack_page/drustack_page.info.yml
@@ -1,7 +1,8 @@
-name: 'Basic page'
+name: 'DruStack Basic page'
 description: 'Provides Basic page content type and related configuration. Use <em>basic pages</em> for your static content, such as an ''About us'' page.'
 type: module
 core_version_requirement: '^8.9 || ^9'
+package: DruStack
 dependencies:
   - 'drupal:field'
   - 'drupal:node'
@@ -10,4 +11,3 @@ dependencies:
   - 'drupal:text'
   - 'drupal:user'
   - 'scheduler:scheduler'
-package: DruStack
