--- a/modules/custom/drustack_article/drustack_article.info.yml
+++ b/modules/custom/drustack_article/drustack_article.info.yml
@@ -14,4 +14,5 @@ dependencies:
   - 'drupal:taxonomy'
   - 'drupal:text'
   - 'drupal:user'
+  - 'drustack_core:drustack_core'
   - 'scheduler:scheduler'
