--- a/modules/custom/drustack_page/drustack_page.info.yml
+++ b/modules/custom/drustack_page/drustack_page.info.yml
@@ -10,4 +10,5 @@ dependencies:
   - 'drupal:rdf'
   - 'drupal:text'
   - 'drupal:user'
+  - 'drustack_core:drustack_core'
   - 'scheduler:scheduler'
