--- a/modules/custom/drustack_core/drustack_core.features.yml
+++ b/modules/custom/drustack_core/drustack_core.features.yml
@@ -1,4 +1,6 @@
 bundle: drustack
+excluded:
+  - core.menu.static_menu_link_overrides
 required:
   - features.bundle.drustack
   - features.settings
