rollback drustack_wysiwyg

--- a/modules/custom/drustack_wysiwyg/config/install/filter.format.restricted_html.yml
+++ b/modules/custom/drustack_wysiwyg/config/install/filter.format.restricted_html.yml
@@ -3,13 +3,13 @@ status: true
 dependencies: {  }
 name: 'Restricted HTML'
 format: restricted_html
-weight: 1
+weight: 0
 filters:
   filter_html:
     id: filter_html
     provider: filter
     status: true
-    weight: -10
+    weight: -40
     settings:
       allowed_html: '<a href hreflang> <em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id>'
       filter_html_help: true
@@ -18,12 +18,18 @@ filters:
     id: filter_autop
     provider: filter
     status: true
-    weight: 0
+    weight: 40
     settings: {  }
   filter_url:
     id: filter_url
     provider: filter
     status: true
-    weight: 0
+    weight: 40
     settings:
       filter_url_length: 72
+  filter_htmlcorrector:
+    id: filter_htmlcorrector
+    provider: filter
+    status: true
+    weight: 50
+    settings: {  }
