--- a/modules/custom/drustack_wysiwyg/config/install/editor.editor.full_html.yml
+++ b/modules/custom/drustack_wysiwyg/config/install/editor.editor.full_html.yml
@@ -36,6 +36,9 @@ settings:
           items:
             - Blockquote
             - DrupalImage
+            - SpecialChar
+            - CodeSnippet
+            - DrupalMediaLibrary
             - Table
             - HorizontalRule
         -
@@ -45,16 +48,52 @@ settings:
         -
           name: Tools
           items:
-            - ShowBlocks
             - Source
+            - Maximize
+            - Templates
+            - Language
+            - ShowBlocks
   plugins:
     stylescombo:
       styles: ''
+    language:
+      language_list: all
+    templates:
+      template_path: ''
+      replace_content: 0
+    codesnippet:
+      highlight_style: github
+      highlight_languages:
+        apache: apache
+        bash: bash
+        cs: cs
+        cpp: cpp
+        coffeescript: coffeescript
+        css: css
+        diff: diff
+        html: html
+        http: http
+        ini: ini
+        java: java
+        javascript: javascript
+        json: json
+        makefile: makefile
+        markdown: markdown
+        nginx: nginx
+        objectivec: objectivec
+        perl: perl
+        php: php
+        python: python
+        ruby: ruby
+        sql: sql
+        vbscript: vbscript
+        xhtml: xhtml
+        xml: xml
 image_upload:
   status: true
   scheme: public
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
