--- a/modules/custom/drustack_wysiwyg/config/install/filter.format.basic_html.yml
+++ b/modules/custom/drustack_wysiwyg/config/install/filter.format.basic_html.yml
@@ -5,38 +5,38 @@ dependencies:
     - editor
 name: 'Basic HTML'
 format: basic_html
-weight: 0
+weight: -3
 filters:
   filter_html:
     id: filter_html
     provider: filter
     status: true
-    weight: -10
+    weight: -40
     settings:
-      allowed_html: '<a href hreflang> <em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <br> <span> <img src alt height width data-entity-type data-entity-uuid data-align data-caption>'
-      filter_html_help: false
+      allowed_html: '<a href hreflang> <em> <strong> <cite> <blockquote cite> <code> <ul type> <ol type start> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <br> <img src alt data-entity-type data-entity-uuid data-align data-caption width height> <pre> <span dir lang> <drupal-media data-entity-t ype data-entity-uuid data-view-mode data-align data-caption alt title>'
+      filter_html_help: true
       filter_html_nofollow: false
   filter_align:
     id: filter_align
     provider: filter
     status: true
-    weight: 7
+    weight: 30
     settings: {  }
   filter_caption:
     id: filter_caption
     provider: filter
     status: true
-    weight: 8
-    settings: {  }
-  filter_html_image_secure:
-    id: filter_html_image_secure
-    provider: filter
-    status: true
-    weight: 9
+    weight: 30
     settings: {  }
   editor_file_reference:
     id: editor_file_reference
     provider: editor
     status: true
-    weight: 11
+    weight: -30
+    settings: {  }
+  filter_htmlcorrector:
+    id: filter_htmlcorrector
+    provider: filter
+    status: true
+    weight: 50
     settings: {  }
