--- a/modules/custom/drustack_core/config/install/core.entity_form_display.media.audio.media_library.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_form_display.media.audio.media_library.yml
@@ -17,6 +17,11 @@ content:
     settings:
       include_locked: true
     third_party_settings: {  }
+  translation:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   created: true
   field_media_audio_file: true
