before pathauto.pattern.media.yml

--- a/modules/custom/drustack_article/drustack_article.info.yml
+++ b/modules/custom/drustack_article/drustack_article.info.yml
@@ -5,9 +5,11 @@ core_version_requirement: '^8.9 || ^9'
 package: DruStack
 dependencies:
   - 'drupal:comment'
+  - 'drupal:content_translation'
   - 'drupal:field'
   - 'drupal:file'
   - 'drupal:image'
+  - 'drupal:language'
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:rdf'
