--- a/modules/custom/drustack_core/config/install/core.base_field_override.shortcut.default.title.yml
+++ b/modules/custom/drustack_core/config/install/core.base_field_override.shortcut.default.title.yml
@@ -10,7 +10,7 @@ bundle: default
 label: Name
 description: 'The name of the shortcut.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
