--- a/modules/custom/drustack_core/config/install/mimemail.settings.yml
+++ b/modules/custom/drustack_core/config/install/mimemail.settings.yml
@@ -1,5 +1,5 @@
-name: ''
-mail: ''
+name: 'Drush Site-Install'
+mail: admin@example.com
 simple_address: false
 sitestyle: true
 textonly: false
@@ -9,4 +9,4 @@ format: full_html
 preserve_class: false
 advanced:
   incoming: false
-  key: ''
+  key: qMWdvokty5inFHvV959mnYcUW5gIwHp8X75hiGCJbGk
