--- a/modules/custom/drustack_page/drustack_page.info.yml
+++ b/modules/custom/drustack_page/drustack_page.info.yml
@@ -4,7 +4,9 @@ type: module
 core_version_requirement: '^8.9 || ^9'
 package: DruStack
 dependencies:
+  - 'drupal:content_translation'
   - 'drupal:field'
+  - 'drupal:language'
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:rdf'
