--- a/modules/custom/drustack_core/config/install/core.entity_form_display.media.video.media_library.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_form_display.media.video.media_library.yml
@@ -12,20 +12,27 @@ mode: media_library
 content:
   langcode:
     type: language_select
-    weight: 2
+    weight: 0
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
+  name:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 2
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
   created: true
   field_media_video_file: true
-  name: true
   path: true
   status: true
   uid: true
