--- a/modules/custom/drustack_core/config/install/core.entity_view_display.block_content.basic.default.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_view_display.block_content.basic.default.yml
@@ -12,7 +12,7 @@ bundle: basic
 mode: default
 content:
   body:
-    label: hidden
+    label: visually_hidden
     type: text_default
     weight: 0
     region: content
