--- a/modules/custom/drustack_core/config/install/core.entity_view_display.comment.comment.default.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_view_display.comment.comment.default.yml
@@ -12,7 +12,7 @@ bundle: comment
 mode: default
 content:
   comment_body:
-    label: hidden
+    label: visually_hidden
     type: text_default
     weight: 0
     region: content
@@ -21,5 +21,7 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
