--- a/modules/custom/drustack_core/config/install/core.entity_view_display.media.image.default.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_view_display.media.image.default.yml
@@ -3,7 +3,6 @@ status: true
 dependencies:
   config:
     - field.field.media.image.field_media_image
-    - image.style.large
     - media.type.image
   module:
     - image
@@ -15,11 +14,11 @@ content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: large
-      image_link: ''
+      image_style: ''
+      image_link: file
     third_party_settings: {  }
     type: image
-    weight: 1
+    weight: 0
     region: content
 hidden:
   created: true
