--- a/modules/custom/drustack_core/config/install/core.entity_view_display.media.image.media_library.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_view_display.media.image.media_library.yml
@@ -4,7 +4,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.media_library
     - field.field.media.image.field_media_image
-    - image.style.medium
+    - image.style.media_library
     - media.type.image
   module:
     - image
@@ -17,9 +17,9 @@ content:
     type: image
     weight: 0
     region: content
-    label: hidden
+    label: visually_hidden
     settings:
-      image_style: medium
+      image_style: media_library
       image_link: ''
     third_party_settings: {  }
 hidden:
