--- a/modules/custom/drustack_core/config/install/core.entity_view_display.user.user.compact.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_view_display.user.user.compact.yml
@@ -21,7 +21,7 @@ content:
       image_style: thumbnail
       image_link: content
     third_party_settings: {  }
-    label: hidden
+    label: visually_hidden
 hidden:
   langcode: true
   member_for: true
