--- a/modules/custom/drustack_core/config/install/core.entity_view_display.user.user.default.yml
+++ b/modules/custom/drustack_core/config/install/core.entity_view_display.user.user.default.yml
@@ -15,6 +15,8 @@ content:
   member_for:
     weight: 5
     region: content
+    settings: {  }
+    third_party_settings: {  }
   user_picture:
     type: image
     weight: 0
@@ -23,6 +25,6 @@ content:
       image_style: thumbnail
       image_link: content
     third_party_settings: {  }
-    label: hidden
+    label: visually_hidden
 hidden:
   langcode: true
