--- a/modules/custom/drustack_core/config/install/features.bundle.drustack.yml
+++ b/modules/custom/drustack_core/config/install/features.bundle.drustack.yml
@@ -14,7 +14,9 @@ assignments:
   base:
     types:
       config:
+        comment_type: comment_type
         node_type: node_type
+        block_content_type: block_content_type
       content:
         user: user
     enabled: true
