--- a/modules/custom/drustack_core/config/install/image.style.large.yml
+++ b/modules/custom/drustack_core/config/install/image.style.large.yml
@@ -2,13 +2,13 @@ langcode: en
 status: true
 dependencies: {  }
 name: large
-label: 'Large (480×480)'
+label: 'Large (960px)'
 effects:
-  ddd73aa7-4bd6-4c85-b600-bdf2b1628d1d:
-    uuid: ddd73aa7-4bd6-4c85-b600-bdf2b1628d1d
+  f49c137d-7b3e-440e-83f1-0831a965abf8:
+    uuid: f49c137d-7b3e-440e-83f1-0831a965abf8
     id: image_scale
-    weight: 0
+    weight: 1
     data:
-      width: 480
-      height: 480
+      width: 960
+      height: null
       upscale: false
