--- a/modules/custom/drustack_core/drustack_core.info.yml
+++ b/modules/custom/drustack_core/drustack_core.info.yml
@@ -23,6 +23,7 @@ dependencies:
   - 'drupal:file'
   - 'drupal:filter'
   - 'drupal:hal'
+  - 'drupal:help'
   - 'drupal:image'
   - 'drupal:jsonapi'
   - 'drupal:language'
