--- a/modules/custom/drustack_core/config/install/search.settings.yml
+++ b/modules/custom/drustack_core/config/install/search.settings.yml
@@ -3,7 +3,7 @@ default_page: node_search
 index:
   cron_limit: 100
   overlap_cjk: true
-  minimum_word_size: 3
+  minimum_word_size: 2
   tag_weights:
     h1: 25
     h2: 18
@@ -17,4 +17,4 @@ index:
     strong: 3
     em: 3
     a: 10
-logging: false
+logging: true
