--- a/modules/custom/drustack_core/config/install/swiftmailer.message.yml
+++ b/modules/custom/drustack_core/config/install/swiftmailer.message.yml
@@ -1,4 +1,4 @@
-content_type: text/html
-text_format: ''
+content_type: text/plain
+text_format: plain_text
 generate_plain: true
 character_set: UTF-8
