rollback drustack_seo and drustack_performance

--- a/modules/custom/drustack_article/drustack_article.info.yml
+++ b/modules/custom/drustack_article/drustack_article.info.yml
@@ -4,12 +4,15 @@ type: module
 core_version_requirement: '^8.9 || ^9'
 package: DruStack
 dependencies:
+  - 'captcha:captcha'
   - 'drupal:comment'
   - 'drupal:content_translation'
   - 'drupal:field'
   - 'drupal:file'
   - 'drupal:image'
   - 'drupal:language'
+  - 'drupal:layout_discovery'
+  - 'drupal:media_library'
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:rdf'
