--- a/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.teaser.yml
+++ b/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.teaser.yml
@@ -25,7 +25,7 @@ content:
     settings:
       trim_length: 600
     third_party_settings: {  }
-    label: hidden
+    label: visually_hidden
   field_image:
     type: image
     weight: -1
@@ -34,7 +34,7 @@ content:
       image_style: medium
       image_link: content
     third_party_settings: {  }
-    label: hidden
+    label: visually_hidden
   field_tags:
     type: entity_reference_label
     weight: 10
@@ -46,8 +46,8 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   comment: true
-  field_image: true
-  field_tags: true
   langcode: true
