--- a/modules/custom/drustack_core/drustack_core.features.yml
+++ b/modules/custom/drustack_core/drustack_core.features.yml
@@ -61,6 +61,9 @@ required:
   - field.storage.block_content.body
   - field.storage.comment.comment_body
   - field.storage.node.body
+  - field.storage.node.field_attachment
+  - field.storage.node.layout_builder__layout
+  - field.storage.node.layout_builder__translation
   - core.date_format.html_month
   - core.date_format.html_time
   - core.date_format.html_week
@@ -170,3 +173,4 @@ required:
   - block.block.seven_primary_local_tasks
   - block.block.seven_secondary_local_tasks
   - contact.form.personal
+  - field.field.node.article.field_attachment
