--- a/modules/custom/drustack_core/drustack_core.info.yml
+++ b/modules/custom/drustack_core/drustack_core.info.yml
@@ -27,6 +27,7 @@ dependencies:
   - 'drupal:image'
   - 'drupal:jsonapi'
   - 'drupal:language'
+  - 'drupal:layout_builder'
   - 'drupal:locale'
   - 'drupal:media'
   - 'drupal:media_library'
