--- a/modules/custom/drustack_article/config/install/core.base_field_override.node.article.unpublish_on.yml
+++ b/modules/custom/drustack_article/config/install/core.base_field_override.node.article.unpublish_on.yml
@@ -10,7 +10,7 @@ bundle: article
 label: 'Unpublish on'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
