--- a/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.teaser.yml
+++ b/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.teaser.yml
@@ -7,10 +7,10 @@ dependencies:
     - field.field.node.article.comment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
-    - image.style.medium
     - node.type.article
+    - responsive_image.styles.bootstrap
   module:
-    - image
+    - responsive_image
     - text
     - user
 id: node.article.teaser
@@ -20,31 +20,31 @@ mode: teaser
 content:
   body:
     type: text_summary_or_trimmed
-    weight: 0
+    weight: 1
     region: content
     settings:
       trim_length: 600
     third_party_settings: {  }
     label: visually_hidden
   field_image:
-    type: image
-    weight: -1
+    type: responsive_image
+    weight: 0
     region: content
     settings:
-      image_style: medium
+      responsive_image_style: bootstrap
       image_link: content
     third_party_settings: {  }
     label: visually_hidden
   field_tags:
     type: entity_reference_label
-    weight: 10
+    weight: 2
     region: content
     settings:
       link: true
     third_party_settings: {  }
     label: above
   links:
-    weight: 100
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
