--- a/modules/custom/drustack_article/config/install/field.field.node.article.comment.yml
+++ b/modules/custom/drustack_article/config/install/field.field.node.article.comment.yml
@@ -13,7 +13,7 @@ bundle: article
 label: Comments
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     status: 2
