--- a/modules/custom/drustack_article/drustack_article.info.yml
+++ b/modules/custom/drustack_article/drustack_article.info.yml
@@ -13,9 +13,11 @@ dependencies:
   - 'drupal:language'
   - 'drupal:layout_discovery'
   - 'drupal:media_library'
+  - 'drupal:menu_ui'
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:rdf'
+  - 'drupal:responsive_image'
   - 'drupal:taxonomy'
   - 'drupal:text'
   - 'drupal:user'
