--- a/modules/custom/drustack_page/config/install/core.base_field_override.node.page.sticky.yml
+++ b/modules/custom/drustack_page/config/install/core.base_field_override.node.page.sticky.yml
@@ -10,7 +10,7 @@ bundle: page
 label: 'Sticky at top of lists'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
