--- a/modules/custom/drustack_page/drustack_page.info.yml
+++ b/modules/custom/drustack_page/drustack_page.info.yml
@@ -8,6 +8,7 @@ dependencies:
   - 'drupal:content_translation'
   - 'drupal:field'
   - 'drupal:language'
+  - 'drupal:menu_ui'
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:rdf'
