--- a/modules/custom/drustack_article/config/install/rdf.mapping.node.article.yml
+++ b/modules/custom/drustack_article/config/install/rdf.mapping.node.article.yml
@@ -46,3 +46,6 @@ fieldMappings:
   field_tags:
     properties:
       - 'schema:about'
+  field_attachment:
+    properties:
+      - 'schema:associatedMedia'
