--- a/modules/custom/drustack_article/config/install/core.entity_form_display.node.article.default.yml
+++ b/modules/custom/drustack_article/config/install/core.entity_form_display.node.article.default.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_attachment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - image.style.thumbnail
@@ -11,6 +12,7 @@ dependencies:
   module:
     - comment
     - image
+    - media_library
     - path
     - scheduler
     - text
@@ -41,6 +43,18 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_attachment:
+    type: media_library_widget
+    weight: 5
+    settings:
+      media_types:
+        - document
+        - audio
+        - image
+        - video
+        - remote_video
+    third_party_settings: {  }
+    region: content
   field_image:
     type: image_image
     weight: 2
