--- a/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.default.yml
+++ b/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.default.yml
@@ -5,6 +5,7 @@ dependencies:
     - core.entity_view_display.comment.comment.default
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_attachment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - image.style.large
@@ -21,39 +22,48 @@ mode: default
 content:
   body:
     type: text_default
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
-    label: hidden
+    label: visually_hidden
   comment:
     type: comment_default
-    weight: 110
+    weight: 5
     region: content
     label: above
     settings:
       view_mode: default
       pager_id: 0
     third_party_settings: {  }
+  field_attachment:
+    type: entity_reference_entity_view
+    weight: 2
+    label: visually_hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    region: content
   field_image:
     type: image
-    weight: -1
+    weight: 0
     region: content
     settings:
       image_style: large
       image_link: ''
     third_party_settings: {  }
-    label: hidden
+    label: visually_hidden
   field_tags:
     type: entity_reference_label
-    weight: 10
+    weight: 3
     region: content
     label: above
     settings:
       link: true
     third_party_settings: {  }
   links:
-    weight: 100
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
