--- a/modules/custom/drustack_article/drustack_article.info.yml
+++ b/modules/custom/drustack_article/drustack_article.info.yml
@@ -21,5 +21,8 @@ dependencies:
   - 'drupal:taxonomy'
   - 'drupal:text'
   - 'drupal:user'
+  - 'drupal:views'
   - 'drustack_core:drustack_core'
+  - 'pathauto:pathauto'
   - 'scheduler:scheduler'
+  - 'xmlsitemap:xmlsitemap'
