--- a/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.default.yml
+++ b/modules/custom/drustack_article/config/install/core.entity_view_display.node.article.default.yml
@@ -38,7 +38,7 @@ content:
     third_party_settings: {  }
   field_attachment:
     type: entity_reference_entity_view
-    weight: 2
+    weight: 4
     label: visually_hidden
     settings:
       view_mode: default
@@ -58,12 +58,12 @@ content:
     type: entity_reference_label
     weight: 3
     region: content
-    label: above
+    label: visually_hidden
     settings:
       link: true
     third_party_settings: {  }
   links:
-    weight: 4
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
