--- a/modules/custom/drustack_page/config/install/core.entity_view_display.node.page.teaser.yml
+++ b/modules/custom/drustack_page/config/install/core.entity_view_display.node.page.teaser.yml
@@ -4,6 +4,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.field_attachment
+    - field.field.node.page.field_tags
     - node.type.page
   module:
     - text
@@ -14,17 +16,19 @@ bundle: page
 mode: teaser
 content:
   body:
-    label: hidden
+    label: visually_hidden
     type: text_summary_or_trimmed
-    weight: 100
+    weight: 0
     region: content
     settings:
       trim_length: 600
     third_party_settings: {  }
   links:
-    weight: 101
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_attachment: true
+  field_tags: true
   langcode: true
