--- a/modules/custom/drustack_page/config/install/rdf.mapping.node.page.yml
+++ b/modules/custom/drustack_page/config/install/rdf.mapping.node.page.yml
@@ -38,3 +38,9 @@ fieldMappings:
       callable: 'Drupal\rdf\SchemaOrgDataConverter::interactionCount'
       arguments:
         interaction_type: UserComments
+  field_attachment:
+    properties:
+      - 'schema:associatedMedia'
+  field_tags:
+    properties:
+      - 'schema:about'
