--- a/modules/custom/drustack_page/drustack_page.info.yml
+++ b/modules/custom/drustack_page/drustack_page.info.yml
@@ -8,6 +8,7 @@ dependencies:
   - 'drupal:content_translation'
   - 'drupal:field'
   - 'drupal:language'
+  - 'drupal:media_library'
   - 'drupal:menu_ui'
   - 'drupal:node'
   - 'drupal:path'
@@ -15,5 +16,6 @@ dependencies:
   - 'drupal:text'
   - 'drupal:user'
   - 'drustack_core:drustack_core'
+  - 'pathauto:pathauto'
   - 'scheduler:scheduler'
   - 'xmlsitemap:xmlsitemap'
