enable layout_builder for drustack_page

--- a/modules/custom/drustack_page/config/install/core.entity_view_display.node.page.teaser.yml
+++ b/modules/custom/drustack_page/config/install/core.entity_view_display.node.page.teaser.yml
@@ -6,6 +6,8 @@ dependencies:
     - field.field.node.page.body
     - field.field.node.page.field_attachment
     - field.field.node.page.field_tags
+    - field.field.node.page.layout_builder__layout
+    - field.field.node.page.layout_builder__translation
     - node.type.page
   module:
     - text
@@ -32,3 +34,5 @@ hidden:
   field_attachment: true
   field_tags: true
   langcode: true
+  layout_builder__layout: true
+  layout_builder__translation: true
