--- a/modules/custom/drustack_layout/drustack_layout.info.yml
+++ b/modules/custom/drustack_layout/drustack_layout.info.yml
@@ -5,7 +5,9 @@ description: 'Provides the tools to take control of your layout.'
 core_version_requirement: '^8.9 || ^9'
 dependencies:
   - 'drupal:block'
+  - 'drupal:field'
   - 'drupal:layout_builder'
+  - 'drupal:node'
   - 'drupal:options'
   - 'drustack_core:drustack_core'
   - 'layout_builder_restrictions:layout_builder_restrictions'
