--- a/modules/custom/drustack_page/config/install/core.entity_form_display.node.page.default.yml
+++ b/modules/custom/drustack_page/config/install/core.entity_form_display.node.page.default.yml
@@ -5,6 +5,8 @@ dependencies:
     - field.field.node.page.body
     - field.field.node.page.field_attachment
     - field.field.node.page.field_tags
+    - field.field.node.page.layout_builder__layout
+    - field.field.node.page.layout_builder__translation
     - node.type.page
   module:
     - media_library
@@ -133,4 +135,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  layout_builder__layout: true
+  layout_builder__translation: true
