--- a/modules/custom/drustack_page/config/install/core.entity_view_display.node.page.default.yml
+++ b/modules/custom/drustack_page/config/install/core.entity_view_display.node.page.default.yml
@@ -5,10 +5,94 @@ dependencies:
     - field.field.node.page.body
     - field.field.node.page.field_attachment
     - field.field.node.page.field_tags
+    - field.field.node.page.layout_builder__layout
+    - field.field.node.page.layout_builder__translation
     - node.type.page
   module:
+    - drustack_layout
+    - layout_builder
+    - layout_builder_restrictions
     - text
     - user
+third_party_settings:
+  layout_builder:
+    allow_custom: true
+    enabled: true
+    sections:
+      -
+        layout_id: drustack_container
+        layout_settings:
+          label: ''
+          layout_classes: ''
+        components:
+          58f3f8af-3c7b-4fb4-a578-cef402e39a26:
+            uuid: 58f3f8af-3c7b-4fb4-a578-cef402e39a26
+            region: content
+            configuration:
+              id: 'field_block:node:page:body'
+              label: Body
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: visually_hidden
+                type: text_default
+                settings: {  }
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+                view_mode: view_mode
+            additional: {  }
+            weight: 0
+            third_party_settings:
+              block_class:
+                classes: col-12
+          61d8c966-119a-46ab-acb5-317ac5b113b7:
+            uuid: 61d8c966-119a-46ab-acb5-317ac5b113b7
+            region: content
+            configuration:
+              id: 'field_block:node:page:field_tags'
+              label: Tags
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: visually_hidden
+                type: entity_reference_label
+                settings:
+                  link: true
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+                view_mode: view_mode
+            additional: {  }
+            weight: 1
+            third_party_settings:
+              block_class:
+                classes: col-12
+          6bd99364-bc41-41d4-9175-f8217de9f640:
+            uuid: 6bd99364-bc41-41d4-9175-f8217de9f640
+            region: content
+            configuration:
+              id: 'extra_field_block:node:page:links'
+              label: Links
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                settings: {  }
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 2
+            third_party_settings:
+              block_class:
+                classes: col-12
+        third_party_settings: {  }
+  layout_builder_restrictions:
+    allowed_block_categories: {  }
+    entity_view_mode_restriction:
+      whitelisted_blocks: {  }
+      blacklisted_blocks: {  }
+      allowed_layouts: {  }
 id: node.page.default
 targetEntityType: node
 bundle: page
@@ -45,3 +129,5 @@ content:
     third_party_settings: {  }
 hidden:
   langcode: true
+  layout_builder__layout: true
+  layout_builder__translation: true
