--- a/modules/custom/drustack_page/drustack_page.info.yml
+++ b/modules/custom/drustack_page/drustack_page.info.yml
@@ -8,6 +8,7 @@ dependencies:
   - 'drupal:content_translation'
   - 'drupal:field'
   - 'drupal:language'
+  - 'drupal:layout_builder'
   - 'drupal:media_library'
   - 'drupal:menu_ui'
   - 'drupal:node'
@@ -16,6 +17,8 @@ dependencies:
   - 'drupal:text'
   - 'drupal:user'
   - 'drustack_core:drustack_core'
+  - 'drustack_layout:drustack_layout'
+  - 'layout_builder_restrictions:layout_builder_restrictions'
   - 'pathauto:pathauto'
   - 'scheduler:scheduler'
   - 'xmlsitemap:xmlsitemap'
