--- a/modules/custom/drustack_wysiwyg/drustack_wysiwyg.info.yml
+++ b/modules/custom/drustack_wysiwyg/drustack_wysiwyg.info.yml
@@ -12,5 +12,6 @@ dependencies:
   - 'drupal:embed'
   - 'drupal:filter'
   - 'drupal:media'
+  - 'drustack_core:drustack_core'
   - 'editor_advanced_link:editor_advanced_link'
   - 'php:php'
