--- a/modules/custom/drustack_wysiwyg/config/install/filter.format.basic_html.yml
+++ b/modules/custom/drustack_wysiwyg/config/install/filter.format.basic_html.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   module:
     - editor
+    - media
 name: 'Basic HTML'
 format: basic_html
 weight: -3
@@ -40,3 +41,12 @@ filters:
     status: true
     weight: 50
     settings: {  }
+  media_embed:
+    id: media_embed
+    provider: media
+    status: false
+    weight: 100
+    settings:
+      default_view_mode: default
+      allowed_media_types: {  }
+      allowed_view_modes: {  }
