http://download.ckeditor.com/templates/releases/templates_4.15.1.zip

--- a/modules/custom/drustack_wysiwyg/config/install/editor.editor.full_html.yml
+++ b/modules/custom/drustack_wysiwyg/config/install/editor.editor.full_html.yml
@@ -53,6 +53,7 @@ settings:
           items:
             - Source
             - Maximize
+            - Templates
             - Language
             - ShowBlocks
   plugins:
