../../../../../libraries/popper.js/dist/popper.min.js

--- a/themes/custom/drustack_bootstrap/drustack_bootstrap.libraries.yml
+++ b/themes/custom/drustack_bootstrap/drustack_bootstrap.libraries.yml
@@ -9,6 +9,14 @@ global-styling:
     - core/jquery
     - core/drupal
 
+popper:
+  version: VERSION
+  js:
+    ../../../../../libraries/popper.js/dist/popper.min.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+
 bootstrap:
   version: VERSION
   js:
