--- a/themes/custom/drustack_bootstrap/drustack_bootstrap.info.yml
+++ b/themes/custom/drustack_bootstrap/drustack_bootstrap.info.yml
@@ -6,6 +6,7 @@ core_version_requirement: '^8.9 || ^9'
 base theme: bootstrap_barrio
 
 libraries:
+  - drustack_bootstrap/popper
   - drustack_bootstrap/bootstrap
   - drustack_bootstrap/fontawesome
   - drustack_bootstrap/global-styling
