--- a/config/install/block.block.drustack_bootstrap_main_menu.yml
+++ b/config/install/block.block.drustack_bootstrap_main_menu.yml
@@ -6,9 +6,9 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_main_menu
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_main_menu
+theme: drustack_bootstrap
 region: primary_menu
 weight: 0
 provider: null
