--- a/config/install/block.block.drustack_bootstrap_branding.yml
+++ b/config/install/block.block.drustack_bootstrap_branding.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_branding
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_branding
+theme: drustack_bootstrap
 region: header
 weight: 0
 provider: null
