--- a/config/install/block.block.drustack_bootstrap_content.yml
+++ b/config/install/block.block.drustack_bootstrap_content.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_content
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_content
+theme: drustack_bootstrap
 region: content
 weight: 0
 provider: null
