--- a/config/install/block.block.drustack_bootstrap_local_actions.yml
+++ b/config/install/block.block.drustack_bootstrap_local_actions.yml
@@ -2,9 +2,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - bartik
-id: bartik_local_actions
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_local_actions
+theme: drustack_bootstrap
 region: content
 weight: -20
 provider: null
