--- a/config/install/block.block.drustack_bootstrap_local_tasks.yml
+++ b/config/install/block.block.drustack_bootstrap_local_tasks.yml
@@ -2,9 +2,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - bartik
-id: bartik_local_tasks
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_local_tasks
+theme: drustack_bootstrap
 region: content
 weight: -40
 provider: null
