--- a/config/install/block.block.drustack_bootstrap_messages.yml
+++ b/config/install/block.block.drustack_bootstrap_messages.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_messages
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_messages
+theme: drustack_bootstrap
 region: highlighted
 weight: 0
 provider: null
