--- a/config/install/block.block.drustack_bootstrap_tools.yml
+++ b/config/install/block.block.drustack_bootstrap_tools.yml
@@ -6,10 +6,10 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_tools
-theme: bartik
-region: sidebar_first
+    - drustack_bootstrap
+id: drustack_bootstrap_tools
+theme: drustack_bootstrap
+region: top_header
 weight: 0
 provider: null
 plugin: 'system_menu_block:tools'
