--- a/modules/drustack_core/config/install/block.block.drustack_bootstrap_footer.yml
+++ b/modules/drustack_core/config/install/block.block.drustack_bootstrap_footer.yml
@@ -6,9 +6,9 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_footer
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_footer
+theme: drustack_bootstrap
 region: footer_fifth
 weight: 0
 provider: null
