--- a/modules/drustack_core/config/install/block.block.drustack_bootstrap_powered.yml
+++ b/modules/drustack_core/config/install/block.block.drustack_bootstrap_powered.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_powered
-theme: bartik
+    - drustack_bootstrap
+id: drustack_bootstrap_powered
+theme: drustack_bootstrap
 region: footer_fifth
 weight: 10
 provider: null
