--- a/modules/drustack_core/config/install/block.block.drustack_bootstrap_search.yml
+++ b/modules/drustack_core/config/install/block.block.drustack_bootstrap_search.yml
@@ -4,10 +4,10 @@ dependencies:
   module:
     - search
   theme:
-    - bartik
-id: bartik_search
-theme: bartik
-region: sidebar_first
+    - drustack_bootstrap
+id: drustack_bootstrap_search
+theme: drustack_bootstrap
+region: top_header
 weight: -1
 provider: null
 plugin: search_form_block
