add image for page

--- a/modules/drustack_blog/config/install/rdf.mapping.node.blog.yml
+++ b/modules/drustack_blog/config/install/rdf.mapping.node.blog.yml
@@ -9,7 +9,7 @@ id: node.blog
 targetEntityType: node
 bundle: blog
 types:
-  - 'schema:Blog'
+  - 'schema:BlogPosting'
 fieldMappings:
   title:
     properties:
