--- a/modules/drustack_page/drustack_page.info.yml
+++ b/modules/drustack_page/drustack_page.info.yml
@@ -7,6 +7,7 @@ dependencies:
   - 'captcha:captcha'
   - 'drupal:content_translation'
   - 'drupal:field'
+  - 'drupal:image'
   - 'drupal:language'
   - 'drupal:layout_builder'
   - 'drupal:media_library'
@@ -14,6 +15,7 @@ dependencies:
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:rdf'
+  - 'drupal:responsive_image'
   - 'drupal:text'
   - 'drupal:user'
   - 'drustack_core:drustack_core'
