--- a/modules/drustack_page/config/install/core.entity_view_display.node.page.teaser.yml
+++ b/modules/drustack_page/config/install/core.entity_view_display.node.page.teaser.yml
@@ -5,11 +5,14 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_attachment
+    - field.field.node.page.field_image
     - field.field.node.page.field_tags
     - field.field.node.page.layout_builder__layout
     - field.field.node.page.layout_builder__translation
     - node.type.page
+    - responsive_image.styles.bootstrap
   module:
+    - responsive_image
     - text
     - user
 id: node.page.teaser
@@ -20,19 +23,35 @@ content:
   body:
     label: visually_hidden
     type: text_summary_or_trimmed
-    weight: 0
+    weight: 1
     region: content
     settings:
       trim_length: 600
     third_party_settings: {  }
+  field_image:
+    type: responsive_image
+    weight: 0
+    region: content
+    label: visually_hidden
+    settings:
+      responsive_image_style: bootstrap
+      image_link: content
+    third_party_settings: {  }
+  field_tags:
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: visually_hidden
+    settings:
+      link: true
+    third_party_settings: {  }
   links:
-    weight: 1
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_attachment: true
-  field_tags: true
   langcode: true
   layout_builder__layout: true
   layout_builder__translation: true
