--- a/modules/drustack_page/config/install/rdf.mapping.node.page.yml
+++ b/modules/drustack_page/config/install/rdf.mapping.node.page.yml
@@ -44,3 +44,12 @@ fieldMappings:
   field_tags:
     properties:
       - 'schema:about'
+  field_image:
+    properties:
+      - 'schema:image'
+  layout_builder__layout:
+    properties:
+      - ''
+  layout_builder__translation:
+    properties:
+      - ''
