--- a/modules/drustack_core/drustack_core.info.yml
+++ b/modules/drustack_core/drustack_core.info.yml
@@ -39,7 +39,6 @@ dependencies:
   - 'drupal:rdf'
   - 'drupal:responsive_image'
   - 'drupal:rest'
-  - 'drupal:search'
   - 'drupal:shortcut'
   - 'drupal:statistics'
   - 'drupal:syslog'
@@ -63,9 +62,12 @@ dependencies:
   - 'imagemagick:imagemagick'
   - 'libraries:libraries'
   - 'mailsystem:mailsystem'
+  - 'menu_block:menu_block'
   - 'mimemail:mimemail'
   - 'module_filter:module_filter'
   - 'pathauto:pathauto'
   - 'scheduler:scheduler'
+  - 'search_api:search_api'
+  - 'search_api_db:search_api_db'
   - 'sophron:sophron'
   - 'swiftmailer:swiftmailer'
