--- a/config/install/block.block.drustack_bootstrap_tools.yml
+++ b/config/install/block.block.drustack_bootstrap_tools.yml
@@ -9,7 +9,7 @@ dependencies:
     - drustack_bootstrap
 id: drustack_bootstrap_tools
 theme: drustack_bootstrap
-region: top_header
+region: footer_fifth
 weight: 0
 provider: null
 plugin: 'system_menu_block:tools'
