--- a/modules/drustack_article/config/install/core.entity_view_display.node.article.search_index.yml
+++ b/modules/drustack_article/config/install/core.entity_view_display.node.article.search_index.yml
@@ -2,55 +2,49 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_display.comment.comment.default
+    - core.entity_view_mode.node.search_index
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_attachment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - node.type.article
-    - responsive_image.styles.bootstrap
   module:
-    - responsive_image
+    - comment
     - text
     - user
-id: node.article.teaser
+id: node.article.search_index
 targetEntityType: node
 bundle: article
-mode: teaser
+mode: search_index
 content:
   body:
-    type: text_summary_or_trimmed
-    weight: 1
-    region: content
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    label: visually_hidden
-  field_image:
-    type: responsive_image
+    type: text_default
     weight: 0
-    region: content
-    settings:
-      responsive_image_style: bootstrap
-      image_link: content
-    third_party_settings: {  }
-    label: visually_hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 2
-    region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    label: visually_hidden
-  links:
-    weight: 3
-    region: content
     settings: {  }
     third_party_settings: {  }
+    label: hidden
+    region: content
+  comment:
+    type: comment_default
+    weight: 2
+    settings:
+      pager_id: 0
+    third_party_settings: {  }
+    label: hidden
+    region: content
+  field_tags:
+    type: entity_reference_label
+    weight: 1
+    settings:
+      link: false
+    third_party_settings: {  }
+    label: hidden
+    region: content
 hidden:
-  comment: true
   field_attachment: true
+  field_image: true
   langcode: true
+  links: true
   search_api_excerpt: true
