--- a/modules/drustack_article/config/install/core.entity_view_display.node.article.search_result.yml
+++ b/modules/drustack_article/config/install/core.entity_view_display.node.article.search_result.yml
@@ -2,55 +2,48 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.search_result
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_attachment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
+    - image.style.thumbnail
     - node.type.article
-    - responsive_image.styles.bootstrap
   module:
-    - responsive_image
+    - image
     - text
     - user
-id: node.article.teaser
+id: node.article.search_result
 targetEntityType: node
 bundle: article
-mode: teaser
+mode: search_result
 content:
   body:
     type: text_summary_or_trimmed
     weight: 1
-    region: content
     settings:
-      trim_length: 600
+      trim_length: 300
     third_party_settings: {  }
-    label: visually_hidden
-  field_image:
-    type: responsive_image
-    weight: 0
+    label: hidden
     region: content
+  field_image:
+    type: image
+    weight: 0
     settings:
-      responsive_image_style: bootstrap
+      image_style: thumbnail
       image_link: content
     third_party_settings: {  }
-    label: visually_hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 2
+    label: hidden
     region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    label: visually_hidden
   links:
-    weight: 3
-    region: content
+    weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden:
   comment: true
   field_attachment: true
+  field_tags: true
   langcode: true
   search_api_excerpt: true
