--- a/modules/drustack_page/config/install/core.entity_view_display.node.page.default.yml
+++ b/modules/drustack_page/config/install/core.entity_view_display.node.page.default.yml
@@ -92,17 +92,20 @@ third_party_settings:
             uuid: 92c7e31c-5c83-4272-8d72-d99a3e68e931
             region: content
             configuration:
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
               id: 'field_block:node:page:field_image'
+              label: Image
+              provider: layout_builder
+              label_display: '0'
               formatter:
-                label: above
+                label: visually_hidden
+                type: responsive_image
                 settings:
-                  image_style: ''
+                  responsive_image_style: bootstrap
                   image_link: ''
                 third_party_settings: {  }
-                type: image
+              context_mapping:
+                entity: layout_builder.entity
+                view_mode: view_mode
             additional: {  }
             weight: 0
             third_party_settings: {  }
@@ -160,3 +163,4 @@ hidden:
   langcode: true
   layout_builder__layout: true
   layout_builder__translation: true
+  search_api_excerpt: true
