--- a/modules/drustack_page/config/install/core.entity_view_display.node.page.search_result.yml
+++ b/modules/drustack_page/config/install/core.entity_view_display.node.page.search_result.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.search_result
     - field.field.node.page.body
     - field.field.node.page.field_attachment
     - field.field.node.page.field_image
@@ -10,48 +10,31 @@ dependencies:
     - field.field.node.page.layout_builder__layout
     - field.field.node.page.layout_builder__translation
     - node.type.page
-    - responsive_image.styles.bootstrap
   module:
-    - responsive_image
     - text
     - user
-id: node.page.teaser
+id: node.page.search_result
 targetEntityType: node
 bundle: page
-mode: teaser
+mode: search_result
 content:
   body:
-    label: visually_hidden
     type: text_summary_or_trimmed
-    weight: 1
-    region: content
+    weight: 100
     settings:
-      trim_length: 600
+      trim_length: 300
     third_party_settings: {  }
-  field_image:
-    type: responsive_image
-    weight: 0
+    label: hidden
     region: content
-    label: visually_hidden
-    settings:
-      responsive_image_style: bootstrap
-      image_link: content
-    third_party_settings: {  }
-  field_tags:
-    type: entity_reference_label
-    weight: 2
-    region: content
-    label: visually_hidden
-    settings:
-      link: true
-    third_party_settings: {  }
   links:
-    weight: 3
-    region: content
+    weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden:
   field_attachment: true
+  field_image: true
+  field_tags: true
   langcode: true
   layout_builder__layout: true
   layout_builder__translation: true
