--- a/modules/drustack_paragraphs/config/install/core.entity_view_display.paragraph.block.default.yml
+++ b/modules/drustack_paragraphs/config/install/core.entity_view_display.paragraph.block.default.yml
@@ -18,4 +18,5 @@ content:
     third_party_settings: {  }
     type: entity_reference_entity_view
     region: content
-hidden: {  }
+hidden:
+  search_api_excerpt: true
