--- a/modules/drustack_paragraphs/config/install/core.entity_view_display.paragraph.views.default.yml
+++ b/modules/drustack_paragraphs/config/install/core.entity_view_display.paragraph.views.default.yml
@@ -20,4 +20,5 @@ content:
     third_party_settings: {  }
     type: viewsreference_formatter
     region: content
-hidden: {  }
+hidden:
+  search_api_excerpt: true
