--- a/modules/drustack_seo/config/install/captcha.settings.yml
+++ b/modules/drustack_seo/config/install/captcha.settings.yml
@@ -1,5 +1,5 @@
 enabled_default: 0
-default_challenge: captcha/Math
+default_challenge: image_captcha/Image
 description: 'This question is for testing whether or not you are a human visitor and to prevent automated spam submissions.'
 administration_mode: false
 allow_on_admin_pages: false
@@ -8,3 +8,4 @@ default_validation: 1
 persistence: 1
 enable_stats: true
 log_wrong_responses: true
+wrong_captcha_response_message: 'The answer you entered for the CAPTCHA was not correct.'
