--- a/modules/drustack_seo/drustack_seo.info.yml
+++ b/modules/drustack_seo/drustack_seo.info.yml
@@ -5,17 +5,20 @@ description: 'DruStack SEO management'
 core_version_requirement: '^8.9 || ^9'
 dependencies:
   - 'captcha:captcha'
+  - 'captcha:image_captcha'
   - 'drupal:language'
   - 'drupal:link'
   - 'drupal:node'
-  - 'drupal:search'
   - 'drupal:user'
   - 'drupal:views'
-  - 'drustack_page:drustack_page'
+  - 'drustack_core:drustack_core'
   - 'metatag:metatag'
   - 'metatag:metatag_verification'
   - 'redirect:redirect'
+  - 'redirect:redirect_404'
   - 'schema_metatag:schema_metatag'
+  - 'search_api:search_api'
+  - 'search_api_db:search_api_db'
   - 'seckit:seckit'
   - 'security_review:security_review'
   - 'sitemap:sitemap'
